--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,7 +4,8 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
 
-    <com.rc.mockgpspath.MockGPSMapView
+    <!-- <com.rc.mockgpspath.MockGPSMapView -->
+    <com.google.android.maps.MapView
         android:id="@+id/mapview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
